fixed alignment of center container and adjusted some sizing

--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -35,6 +35,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #e6e6e6;
+    overflow: hidden;
 }
 
 header {
@@ -143,7 +144,7 @@ p {
 
 .product-box {
     width: 300px;
-    height: 400px;
+    height: 370px;
     padding: 40px;
     background-color: #fff;
     border-radius: 5px;
@@ -163,7 +164,7 @@ p {
 }
 
 .product-box img {
-    max-height: 230px;
+    max-height: 200px;
     max-width: 250px;
     height: auto;
     align-self: center;
@@ -236,6 +237,7 @@ p {
 }
 
 .center-container{
+    width: 180px;
     display: flex;
     flex-direction: column;
     align-items: center;
